# live-info-scraper

./: .pre-commit-config.yaml  .pre-commit-config.yml  pyproject.toml
.github/workflows/: ci.yml
cdk/: cdk.context.json  cdk.json  package-lock.json  package.json
cdk/lib/: live-info-scraper-stack.ts  props.ts
src/: main.py
src/Entity/: live.py  ticket.py
src/adapter/repository/: __init__.py  repository.py
src/adapter/scraping/: __init__.py  scraper.py
src/adapter/scraping/eplus/: __init__.py  eplus_search.py  raw_live_info_extractor.py  ticket_info_extractor.py
src/repository/scraping/: browser_manager.py  scraper.py
src/repository/scraping/eplus/: eplus_search.py  live_detail_extractor.py  raw_live_info_extractor.py  ticket_info_extractor.py
src/repository/scraping/l_tike/: Ltike_search.py
src/util/: date_range.py  errors.py
