[tool.poetry]
name = "pythonscraping"
version = "0.1.0"
description = ""
authors = ["ogapy <kyon6690@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.18.1"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
